WS_INTEGRATION/Sandbox/src/objects/InventionOLD__c.object
<CustomObject>
    <description>Used to track KUIC Inventions</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Invention Track Code - Unique External ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Invention Track Code - Unique External ID - For reference to Wellspring</inlineHelpText>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invention_Name__c</fullName>
        <description>Name of the Invention</description>
        <inlineHelpText>Name of the Invention</inlineHelpText>
        <label>Invention Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NCS_URL__c</fullName>
        <label>NCS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PrimaryInventor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PrimaryInventor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>KU Contacts</value>
            </filterItems>
            <infoMessage>Please be sure the Contact is a KU Contact</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>InventionsOLD</relationshipLabel>
        <relationshipName>InventionsOLD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Works</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagnostics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>InventionOLD</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>Invention_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>PrimaryInventor__c</columns>
        <columns>Technology__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Inventions</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>Invention_Name__c</columns>
        <columns>PrimaryInventor__c</columns>
        <columns>Technology__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Inventions</label>
    </listViews>
    <nameField>
        <label>Track Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InventionsOLD</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>